--- a/BasicAlgorithm/激活函数.md
+++ b/BasicAlgorithm/激活函数.md
@@ -29,7 +29,7 @@ sigmoid 函数 能够把输入的连续实值变换为0和1之间的输出，特
 
 #### 2.1.3 sigmoid 函数 有什么缺点？
 
-1. 在深度神经网络中梯度反向传递时导致梯度爆炸和梯度消失，其中梯度爆炸发生的概率非常小，而梯度消失发生的概率比较大；
+1. 如果我们初始化神经网络的权值为[0,1]之间的随机数，由反向传播算法的数学推导可以知道，梯度从后向前传播时，每传递一层梯度值都会下降为原来原来的0.25倍，如果神经网络层比较多是时，那么梯度会穿过多层之后变得接近于0，也就出现梯度消失问题，当权值初始化为 [1,+]期间内的值时，则会出现梯度爆炸问题；
 
 ![](img/微信截图_20201228220429.png)
 
