1. 修改 BatchNormVsLayerNorm.md 2. 过拟合和欠拟合.md 3. 增加 TextMining/readme.md

--- a/BasicAlgorithm/过拟合和欠拟合.md
+++ b/BasicAlgorithm/过拟合和欠拟合.md
@@ -47,7 +47,7 @@
 
 - 原因：模型没有很好的捕捉数据特征，不能很好地拟合数据
 
-### 3.3 过拟合的解决方法是什么？
+### 3.3 欠拟合的解决方法是什么？
 
 1. 做特征工程，添加更多的特征项，比如特征组合、高次特征，来增大假设空间。如果欠拟合是由于特征项不够，没有足够的信息支持模型做判断；
 2. 集成学习方法boosting（如GBDT）能有效解决high bias；
